Fixing spacing
Bug only shows on live version

--- a/assets/css/3-sections/index/_experience.sass
+++ b/assets/css/3-sections/index/_experience.sass
@@ -26,11 +26,7 @@
 	padding-left: 10px
 	text-indent: -10px
 	+clearfix
-.exp-listUnit
-	display: block
-	margin-left: 3%
-	line-height: 1.6em
-.exp-listUnit-single
+.exp-listUnit, .exp-listUnit-single
 	display: block
 	margin-left: 3%
 	line-height: 1.6em
